--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/CrisobalRatto/microservice/issues"
   },
-  "homepage": "https://github.com/CrisobalRatto/microservice#readme"
+  "homepage": "https://github.com/CrisobalRatto/microservice#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.5",
+    "nodemon": "^2.0.15"
+  }
 }
