--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/CrisobalRatto/microservice#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "client-sessions": "^0.8.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
