--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "bcrypt": "^5.0.1",
     "client-sessions": "^0.8.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.2"
   }
 }
