--- a/react-fe/package.json
+++ b/react-fe/package.json
@@ -2,6 +2,11 @@
   "name": "lamaadmin",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:3001",
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.29",
@@ -9,11 +14,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "date-fns": "^2.28.0",
+    "dotenv": "^11.0.0",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
     "web-vitals": "^1.0.1"
