--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.0.1",
     "client-sessions": "^0.8.0",
     "dotenv": "^10.0.0",
+    "http-proxy-middleware": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
     "nodemon": "^2.0.15"
