--- a/react-fe/package.json
+++ b/react-fe/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^4.11.4",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.29",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.3.1",
@@ -20,6 +20,7 @@
     "axios": "^0.24.0",
     "date-fns": "^2.28.0",
     "dotenv": "^11.0.0",
+    "material-table": "^1.69.3",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
