--- a/react-fe/package.json
+++ b/react-fe/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.2",
     "recharts": "^2.0.9",
     "web-vitals": "^1.0.1"
   },
