--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "http-proxy-middleware": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "cors": "^2.8.5",
