--- a/react-fe/package.json
+++ b/react-fe/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.2.2",
     "recharts": "^2.0.9",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
