--- a/react-fe/package.json
+++ b/react-fe/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "date-fns": "^2.28.0",
+    "dateformat": "^5.0.2",
     "dotenv": "^11.0.0",
     "material-table": "^1.69.3",
     "react": "^17.0.2",
